gitops/components/service-mesh/tasklist/base/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: tasklist
spec:
  mtls:
    mode: STRICT
  selector:
    matchLabels:
      name: tasklist
