gitops/components/service-mesh/tasklist/base/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: tasklist
spec:
  host: PATCH_THIS # patch for namespace
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: v1
      labels:
        version: v1
